prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_literal_string_to_int.nut
// EXPECTED: compile-time error - string literal assigned to int variable
local x: int = "hello"
return x
